estrutura dos cards]

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
 
     <title>HUNTERFY!</title>
@@ -20,6 +22,23 @@
     </header>
     <main>
         <div class="area-cards">
+            
+            <div class="card">
+                <div class="infos">
+                    <div class="info-card info-text"><h2>Parcel ID:</h2><h2>23232323</h2></div>
+                    <div class="info-card info-img"><h2>IMAGEM SATELITE:</h2><h2></h2></div>
+                    <div class="info-card info-img"><h2>IMAGEM FLOOD ZONE:</h2><h2></h2></div>
+                    <div class="info-card info-img"><h2>IMAGEM MAPS:</h2><h2></h2></div>
+                    <div class="info-card info-img"><h2>IMAGEM STREETVIEW:</h2><h2></h2></div>
+                    <div class="info-card info-text"><h2>OBSERVAÇÃO:</h2><h2>23232323</h2></div>
+                    <div class="info-card info-text"><h2>FLOOD ZONE:</h2><h2>23232323</h2></div>
+                    <div class="info-card info-img"><h2>TAX OWNED:</h2><h2></h2></div>
+                    <div class="info-card info-text"><h2>MARKET VALUE</h2><h2>23232323</h2></div>
+                    <div class="info-card info-text"><h2>LINK GIS:</h2><h2>23232323</h2></div>
+                    <div class="info-card info-text"><h2>ENDEREÇO:</h2><h2>23232323</h2></div>
+                </div>
+                <button class="edit"><i class="fas fa-pen-square"></i></button>
+            </div>
             
 
 
