--- a/index.html
+++ b/index.html
@@ -23,27 +23,32 @@
     <main>
         <div class="area-cards">
             
-            <div class="card">
-                <div class="infos">
-                    <div class="info-card info-text"><h2>Parcel ID:</h2><h2>23232323</h2></div>
-                    <div class="info-card info-img"><h2>IMAGEM SATELITE:</h2><h2></h2></div>
-                    <div class="info-card info-img"><h2>IMAGEM FLOOD ZONE:</h2><h2></h2></div>
-                    <div class="info-card info-img"><h2>IMAGEM MAPS:</h2><h2></h2></div>
-                    <div class="info-card info-img"><h2>IMAGEM STREETVIEW:</h2><h2></h2></div>
-                    <div class="info-card info-text"><h2>OBSERVAÇÃO:</h2><h2>23232323</h2></div>
-                    <div class="info-card info-text"><h2>FLOOD ZONE:</h2><h2>23232323</h2></div>
-                    <div class="info-card info-img"><h2>TAX OWNED:</h2><h2></h2></div>
-                    <div class="info-card info-text"><h2>MARKET VALUE</h2><h2>23232323</h2></div>
-                    <div class="info-card info-text"><h2>LINK GIS:</h2><h2>23232323</h2></div>
-                    <div class="info-card info-text"><h2>ENDEREÇO:</h2><h2>23232323</h2></div>
+            <div>
+                <div class="card">
+                    <div class="infos">
+                        <div class="info-card info-text"><h2>PARCEL ID:</h2><h2>02-01-16-0-003</h2></div>
+                        <div class="info-card info-img"><h2>IMAGEM SATELITE:</h2><h2></h2></div>
+                        <div class="info-card info-img"><h2>IMAGEM FLOOD ZONE:</h2><h2></h2></div>
+                        <div class="info-card info-img"><h2>IMAGEM MAPS:</h2><h2></h2></div>
+                        <div class="info-card info-img"><h2>IMAGEM STREETVIEW:</h2><h2></h2></div>
+                        <div class="info-card info-text"><h2>OBSERVAÇÃO:</h2><h2>Casa na frente do terreno</h2></div>
+                        <div class="info-card info-text"><h2>FLOOD ZONE:</h2><h2>MINIMAL 1/10</h2></div>
+                        <div class="info-card info-img"><h2>TAX OWNED:</h2><h2></h2></div>
+                        <div class="info-card info-text"><h2>MARKET VALUE</h2><h2>23232323</h2></div>
+                        <div class="info-card info-text"><h2>LINK GIS:</h2><h2>https://www.wcgis.us/apps/public/</h2></div>
+                        <div class="info-card info-text"><h2>ENDEREÇO:</h2><h2>2 Valley St, Arnold eererere, PA 15068, EUA</h2></div>
+                    </div>
+                    <button class="edit" onclick="abrirCardEdit()"><i class="fas fa-pen-square"></i></button>
                 </div>
-                <button class="edit"><i class="fas fa-pen-square"></i></button>
+                <div class="card-edit">
+                    <button class="fechar-card" onclick="fecharCardEdit()"><i class="fas fa-times-circle"></i></button>
+                </div>
             </div>
-            
 
 
         </div>
     </main>
     <script src="./js/new-card.js"></script>
+    <script src="./js/edit-card.js" async></script>
 </body>
 </html>
