--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <div class="area-cards">
             
-            <div>
+                <div class="root-edit"></div>
                 <div class="card">
                     <div class="infos">
                         <div class="info-card info-text"><h2>PARCEL ID:</h2><h2>02-01-16-0-003</h2></div>
@@ -48,7 +48,7 @@
                     </div>
                     <button class="edit" onclick="abrirCardEdit()"><i class="fas fa-pen-square"></i></button>
                 </div>
-                <div class="card-edit">
+                <!--<div class="card-edit">
                     <button class="fechar-card" onclick="fecharCardEdit()"><i class="fas fa-times-circle"></i></button>
                     <form action="" method="POST">
                         <div class="campo1">
@@ -76,13 +76,11 @@
                             <div><button>SALVAR</button></div>
                         </div>
                     </form>
-                </div>
-            </div>
-
-
+                </div>-->
         </div>
     </main>
-    <script src="./js/new-card.js"></script>
+    <script src="./js/dom-elements.js"></script>
+    <script src="./js/new-card.js" async></script>
     <script src="./js/edit-card.js" async></script>
 </body>
 </html>
