tela login iniciada

--- a/login.html
+++ b/login.html
@@ -17,8 +17,10 @@
 </head>
 <body>
     <section class="login">
+        <div class="papel"></div>
+        <div class="papel papel2"></div>
         <div class="janela-login">
-            
+            <div class="logo" style="margin: 0; padding: 0;"><img src="./img/thegame.png" alt=""></div>
                 
         </div>
     </main>
