--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 <body>
     <header>
         
-        <div class="logo"><h1><i class="fas fa-hat-cowboy"></i>HUNTERFY.</h1></div>
+        <div>
+            <div class="logo"><h1><i class="fas fa-hat-cowboy"></i>HUNTERFY.</h1></div>
+            <div class="logo" style="margin: 0; padding: 0;"><img src="./img/thegame.png" alt=""></div>
+        </div>
             <div>
-                <div class="menu-info">
+                <div class="menu-info janela-info">
                     <h2>Contagem:</h2><h2 class="contador">0</h2>
                 </div>
                 <button class="menu-button info-button"><i class="fas fa-info"></i></button>
