--- a/client/app.html
+++ b/client/app.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
+    <script src="../server/index.js"></script>
 
     <title>HUNTERFY!</title>
 </head>
