--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,10 @@
                 
         </div>
     </main>
+    <script src="./js/image-file-functions.js"></script>
     <script src="./js/dom-elements.js"></script>
     <script src="./js/new-card.js" async></script>
     <script src="./js/edit-card.js" async></script>
+    
 </body>
 </html>
